[project]
name = "writers-and-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Gonzalo Ramos",email = "gonzo.ramos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml (>=6.0.0,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
